# inferforge

./: .env.vllm  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
builder/: config.py  main.py  schemas.py
builder/presets/: bert.yaml  clip.yaml
builder/routers/: build.py
builder/services/: build_pipeline.py  config_generator.py  dag_validator.py  job_tracker.py  onnx_exporter.py  preset_loader.py  triton_deployer.py
docker/: Dockerfile.builder  Dockerfile.gateway  Dockerfile.triton  Dockerfile.vllm  docker-compose.ci.yml  docker-compose.yml
docs/: architecture.md  conversion-guide.md  performance.md
example/: bert_gateway_example.py  bert_triton_example.py  clip_gateway_example.py  clip_triton_example.py  infer_examples.http  llm_generate_example.py
gateway/: config.py  main.py
gateway/clients/: builder_client.py  redis_client.py  triton_client.py  triton_http_client.py  vllm_client.py
gateway/middlewares/: adaptive_concurrency.py  auth.py  circuit_breaker.py  circuit_breaker_middleware.py  metrics.py  rate_limit.py  request_id.py  retry_policy.py  throttle.py
gateway/routers/: generate.py  health.py  inference.py  lora.py  models.py  version.py
gateway/schemas/: generation.py  inference_request.py  inference_response.py  lora.py  model_management.py  triton_types.py
gateway/services/: embedding_cache.py  generation_service.py  inference_service.py  lora_registry.py  model_management_service.py  postprocess.py  preprocess.py
gateway/utils/: exceptions.py  logger.py  resilience.py
lora_sync/: sync.py
model/model_configs/: bert_config.yaml  clip_image_encoder.yaml  clip_text_encoder.yaml
model/preprocessors/: clip_image_preprocessor.py  clip_text_preprocessor.py
model/scripts/: build_trt_engine.sh  convert_all.sh  convert_to_onnx.py  validate_model.py
model_builder/model_configs/: bert_config.yaml  clip_image_encoder.yaml  clip_text_encoder.yaml
model_builder/postprocessors/: clip_feature_merger.py
model_builder/preprocessors/: bert_preprocessor.py  clip_image_preprocessor.py  clip_text_preprocessor.py
model_repository/: Readme.md
performance/: Readme.md  analyze_results.py  config_matrix.json  sweep_perf.py
tests/: conftest.py
weights/: download_weights.py
(+83 files in other folders)
