[project]
name = "triton-inference-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "fastapi>=0.118.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.1",
    "openai-clip>=1.0.1",
    "pillow>=11.3.0",
    "prometheus-client>=0.23.1",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "tenacity>=9.1.2",
    "torch>=2.8.0",
    "transformers>=4.57.1",
    "types-pyyaml>=6.0.12.20250915",
    "uvicorn>=0.37.0",
]


[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "types-requests>=2.32.4.20250913",
]

[tool.mypy]
exclude = "(model_repository/.*/1/|models/scripts/|weights/)"
ignore_missing_imports = true
explicit_package_bases = true

[tool.setuptools]
packages = { find = {} }
